feat: Se agrego encriptación de entidades , se agrego archivos y directorios nuevos
Se agregaron los siguientes archivos y directorios nuevos:
- backend/src/auth/exceptions/index.ts
- backend/src/lib/utilities/common/index.ts
- backend/src/lib/utilities/common/extract-type-from-entity.utility.ts
- backend/src/auth/exceptions/user.exception.ts
- backend/src/decorator/type-user.decorator.ts
- backend/src/lib/utilities/index.ts
- backend/src/auth/entities/user.entity.ts
- backend/src/lib/utilities/encrypt/handle-by-crypt.utility.ts
- backend/src/lib/utilities/common/password-generator.utility.ts
- backend/src/auth/entities/profile.entity.ts
- backend/src/database/data-source.ts
- backend/src/auth/guard/type-user.guard.ts
- backend/docs/swagger-spec.json
- backend/src/auth/controller/auth.controller.ts

Estos cambios agregan nuevos archivos y directorios al proyecto.
